feat: add more endpoints
