# src/main/java/io/swagger/petstore/controller/OrderController.java
@@ -26,6 +26,7 @@ import org.joda.time.DateTime;
 import javax.ws.rs.core.Response;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 
 @javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaInflectorServerCodegen", date = "2017-04-08T15:48:56.501Z")
 public class OrderController {
@@ -101,5 +102,21 @@ public class OrderController {
         return new ResponseContext()
                 .contentType(Util.getMediaType(request))
                 .entity(pendingOrders);
+    }
+
+    public ResponseContext searchOrders(final RequestContext request, final String status, final Long petId) {
+        final List<Order> searchResults = orderData.searchOrders(status, petId);
+
+        return new ResponseContext()
+                .contentType(Util.getMediaType(request))
+                .entity(searchResults);
+    }
+
+    public ResponseContext getStoreStats(final RequestContext request) {
+        final Map<String, Object> stats = orderData.getStoreStats();
+
+        return new ResponseContext()
+                .contentType(Util.getMediaType(request))
+                .entity(stats);
     }
 }
